# degen

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose-prod.yml  docker-compose.yml  process-compose.yml
api/: Degen.slnx  Dockerfile
api/src/Degen.Api/: Degen.Api.csproj  Program.cs
api/src/Degen.Api/Endpoints/: InstrumentEndpoints.cs
api/src/Degen.Domain/Instruments/: Instrument.cs
api/src/Degen.Infrastructure/: Degen.Infrastructure.csproj  DependencyInjection.cs
api/src/Degen.Infrastructure/Migrations/: 20260717171900_InitialCreate.Designer.cs  20260717171900_InitialCreate.cs  AppDbContextModelSnapshot.cs
api/src/Degen.Infrastructure/Persistence/: AppDbContext.cs
apps/api/: Dockerfile  pyproject.toml
apps/api-core/: .dockerignore  Degen.slnx  Directory.Packages.props  Dockerfile
apps/api/src/: main.py
apps/web/: .gitignore  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
apps/web-angular/: .prettierignore  .prettierrc  Dockerfile  angular.json  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
apps/web-angular/src/: index.html  styles.css
apps/worker-market/: .dockerignore  .env.example  Degen.Worker.Market.slnx  Directory.Packages.props  Dockerfile
infra/: setup-dev.sh
infra/db/: init.sql
infra/docker/: docker-compose.infra.yml  docker-compose.yml
web/: .dockerignore  Dockerfile  angular.json  nginx.conf  package.json  pnpm-lock.yaml
web/src/: index.html  styles.css
web/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.routes.ts
(+110 files in other folders)
