[project]
name = "degen-api"
version = "0.1.0"
description = "Degen API service."
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.30.6",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "W",  # pycodestyle
  "F",       # pyflakes
  "I",       # isort
  "B",       # bugbear
  "UP",      # pyupgrade
  "N",       # pep8-naming
  "D",       # pydocstyle
  "A",       # builtins
  "C4",      # comprehensions
  "PL",      # pylint rules (ruff subset)
]
ignore = [
  "D100",  # missing docstring in public module
  "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004"]